--- a/sass/pages/_accueil.scss
+++ b/sass/pages/_accueil.scss
@@ -100,18 +100,20 @@ FONCTIONNEMENT
         justify-content: center;
         align-items: center;
         align-content: center;
+        position: relative;
         margin: 10px 0;
         counter-reset: fonctionnementCount;
     }
 
     &__li-item {
         position: relative;
+        min-width: 250px;
         width: 86%;
         height: 70px;
         list-style: none;
         background-color: $bg-lightgrey;
         margin: 10px 0;
-        text-align: center;
+        padding-left: 20%;
         border-radius: 25px;
         padding-top: 1.8rem;
         box-shadow: 5px 5px 8px $bg-mediumgrey;
@@ -131,9 +133,23 @@ FONCTIONNEMENT
     }
 
     &__li-item > span {
-        margin-right: 2rem;
         color: #7E7E7E;
-        
+        position: absolute;
+        left: 12.5%; 
+    }
+
+    &__li-item:nth-child(1) > span {
+        color: #7E7E7E;
+        font-size: 1.25rem;
+        top: 25px;
+    }
+
+    &__li-item:nth-child(2) > span {
+        color: #7E7E7E;
+    }
+
+    &__li-item:nth-child(3) > span {
+        color: #7E7E7E;
     }
 
     &__li-item:hover {
